<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="FB_HomeSpitUnit" Id="{66f0b083-fffa-49ab-9cc7-24e5f6b91475}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_HomeSpitUnit
(*========================================
Execute需一直有效，功能块才会一直执行
先回原点，在碰右极限,再回原点
==========================================*)
VAR_IN_OUT
	Axis				:AXIS_REF;	(* B *)
END_VAR
VAR_INPUT
	Execute						:BOOL;	(* B *)
	PosLimit					:BOOL;			(*正极限位信号*)
	Position						:LREAL			(* B *) := DEFAULT_HOME_POSITION;
	HomeingVelo				:LREAL:=5;
	Standby_position		:LREAL;		//最终待机位
	bCalibrationCam 		:BOOL;	(* V *)	(* Beckhoff proprietary input *)
	rel_dis         				:LREAL:=10;  //碰到原点后，正向移动距离，在开始寻原点
	reset							:BOOL;
	maxDistance				:LREAL;
END_VAR
VAR_OUTPUT
	Done				:BOOL;	(* B *)
	Busy				:BOOL;	(* E *)
	Active				:BOOL;	(* E *)
	CommandAborted		:BOOL;	(* E *)
	Error				:BOOL;	(* B *)
	ErrorID				:UDINT;	(* E *)
END_VAR
VAR
	mcJog			:MC_Jog;
	mcHome			:MC_Home;
	mcRel           :MC_MoveRelative;
	mcAbs           :MC_MoveAbsolute;	
	mcStop			:MC_Stop;
	HomeStep		:INT;
	ton				:TON;
	StopDo			:BOOL;
	startPos		:LREAL;
	trig_start		:Tc2_Standard.R_TRIG;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF  NOT Execute THEN
	mcHome.Execute		:=FALSE;
	mcRel.Execute			:=FALSE;
	mcAbs.Execute			:=FALSE;
	done							:=FALSE;
	busy							:=FALSE;	
	HomeStep					:=0;
END_IF

IF reset THEN 
	Error					:=FALSE;
END_IF

CASE HomeStep OF

0:
	busy	:=FALSE;
	Done	:=FALSE;
	mcHome.Execute	:=FALSE;
	trig_start(CLK:=FALSE );
	startPos:=0;
	IF 	Execute AND NOT Error  THEN		
		IF  NOT bCalibrationCam THEN
			HomeStep	:=10;
		ELSE
			HomeStep	:=20;
		END_IF
		busy	:=TRUE;		
	END_IF
	
10:(*先向负限位方向运动*)
	mcJog.JogForward		:=FALSE;
	mcJog.JogBackwards		:=TRUE;	
	trig_start(CLK:=mcJog.JogForward , Q=> );
	IF trig_start .Q THEN 
		startPos:=Axis.NcToPlc.ActPos;
	END_IF
	 
	IF	bCalibrationCam THEN
		mcJog.JogBackwards	:=FALSE;
		HomeStep	:=20;
	ELSIF mcJog.Error  THEN
			HomeStep	:=100;
	ELSIF NOT bCalibrationCam AND ABS(startPos-Axis.NcToPlc.ActPos)>maxDistance THEN 
			HomeStep	:=100;
	END_IF
	
20:(*从原点处正方向移动一段距离*)
	trig_start(CLK:=FALSE );
	mcRel.Execute		:=TRUE;	
	IF mcRel.Done AND Axis.Status.NotMoving THEN 
		mcRel.Execute	:=FALSE;
		HomeStep		:=30;
	ELSIF mcRel.Error  THEN 
		HomeStep	:=100;	
	END_IF
	
	(*****正向离开原点停止***********************************
	trig_start(CLK:=FALSE );
	mcJog.JogForward		:=TRUE;
	IF	NOT bCalibrationCam THEN
		mcJog.JogForward	:=FALSE;
		HomeStep	:=30;
	ELSIF mcJog.Error  THEN
			HomeStep	:=100;
	END_IF
	*)
30:(*调用回零功能块*)
	mcHome.Execute	:=TRUE;
	IF mcHome.Done AND AXIS.Status.Homed THEN
		mcHome.Execute	:=FALSE;	
		HomeStep		:=50;
	ELSIF AXIS.Status.Error  THEN
		HomeStep		:=100;
	END_IF
50:(*回待机位*)
	mcAbs.Execute:=TRUE;
	IF mcAbs.Done AND Axis.Status.NotMoving THEN 
		mcAbs.Execute	:=FALSE;
		done			:=TRUE;
		HomeStep		:=99; 		
	END_IF	
99:
	;	

100:
	Error			:=TRUE;
	trig_start(CLK:=FALSE );
	IF	mcHome.ErrorID <> 0 THEN
		ErrorID			:=mcHome.ErrorID;
	ELSIF  mcJog.ErrorID <> 0 THEN
		ErrorID			:=mcJog.ErrorID;
	ELSIF mcRel.ErrorID<>0 THEN 
		ErrorID			:=mcRel.ErrorID;
	ELSIF mcAbs.ErrorID<>0 THEN 
		ErrorID			:=mcAbs.ErrorID;	
	END_IF
	mcJog.JogForward			:=FALSE;
	mcJog.JogBackwards		:=FALSE;	
	mcRel.Execute				:=FALSE;
	mcHome.Execute			:=FALSE;
	StopDo							:=TRUE;
	HomeStep						:=0;
	
END_CASE


Call_FB();]]></ST>
    </Implementation>
    <Action Name="Call_FB" Id="{22ef86a8-2b21-4535-ad13-04e44b10eb34}">
      <Implementation>
        <ST><![CDATA[Axis.ReadStatus();
mcJog
	(
	Velocity:=	HomeingVelo ,
	Mode:=		MC_JOGMODE_CONTINOUS ,
	Axis:=		Axis ,
	);

mcHome
	(
	Execute:= ,
	Position:=			Position ,
	HomingMode:= 		,
	BufferMode:= 		,
	Options:=			 ,
	bCalibrationCam:=	bCalibrationCam ,
	Axis:=				Axis ,
	);

mcRel(
	Axis:=Axis , 
	Execute:= , 
	Distance:=rel_dis , 
	Velocity:= HomeingVelo, 
	Acceleration:= , 
	Deceleration:= , 
	Jerk:= , 
	BufferMode:= , 
	Options:= , 
	Done=> , 
	Busy=> , 
	Active=> , 
	CommandAborted=> , 
	Error=> , 
	ErrorID=> );
mcAbs(
	Axis:=Axis , 
	Execute:= , 
	Position:=Standby_position , 
	Velocity:=HomeingVelo , 
	Acceleration:= , 
	Deceleration:= , 
	Jerk:= , 
	BufferMode:= , 
	Options:= , 
	Done=> , 
	Busy=> , 
	Active=> , 
	CommandAborted=> , 
	Error=> , 
	ErrorID=> );
mcStop(
	Axis:=Axis , 
	Execute:=StopDo , 
	Deceleration:= , 
	Jerk:= , 
	Options:= , 
	Done=> , 
	Busy=> , 
	Active=> , 
	CommandAborted=> , 
	Error=> , 
	ErrorID=> );
IF mcStop.Busy THEN 
	StopDo:=FALSE;
END_IF]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="FB_HomeSpitUnit">
      <LineId Id="36" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="222" Count="1" />
      <LineId Id="40" Count="1" />
      <LineId Id="43" Count="0" />
      <LineId Id="45" Count="0" />
      <LineId Id="294" Count="0" />
      <LineId Id="46" Count="0" />
      <LineId Id="291" Count="1" />
      <LineId Id="47" Count="5" />
      <LineId Id="566" Count="0" />
      <LineId Id="464" Count="0" />
      <LineId Id="466" Count="0" />
      <LineId Id="53" Count="0" />
      <LineId Id="56" Count="0" />
      <LineId Id="232" Count="0" />
      <LineId Id="57" Count="3" />
      <LineId Id="62" Count="0" />
      <LineId Id="224" Count="0" />
      <LineId Id="165" Count="0" />
      <LineId Id="167" Count="1" />
      <LineId Id="453" Count="1" />
      <LineId Id="457" Count="0" />
      <LineId Id="455" Count="1" />
      <LineId Id="170" Count="1" />
      <LineId Id="183" Count="0" />
      <LineId Id="179" Count="1" />
      <LineId Id="461" Count="1" />
      <LineId Id="63" Count="0" />
      <LineId Id="225" Count="0" />
      <LineId Id="166" Count="0" />
      <LineId Id="463" Count="0" />
      <LineId Id="184" Count="0" />
      <LineId Id="186" Count="1" />
      <LineId Id="189" Count="0" />
      <LineId Id="210" Count="1" />
      <LineId Id="188" Count="0" />
      <LineId Id="556" Count="1" />
      <LineId Id="226" Count="0" />
      <LineId Id="559" Count="0" />
      <LineId Id="561" Count="3" />
      <LineId Id="560" Count="0" />
      <LineId Id="565" Count="0" />
      <LineId Id="558" Count="0" />
      <LineId Id="191" Count="0" />
      <LineId Id="193" Count="1" />
      <LineId Id="227" Count="0" />
      <LineId Id="196" Count="1" />
      <LineId Id="199" Count="0" />
      <LineId Id="185" Count="0" />
      <LineId Id="511" Count="5" />
      <LineId Id="228" Count="0" />
      <LineId Id="213" Count="0" />
      <LineId Id="370" Count="0" />
      <LineId Id="114" Count="2" />
      <LineId Id="465" Count="0" />
      <LineId Id="117" Count="3" />
      <LineId Id="280" Count="3" />
      <LineId Id="121" Count="0" />
      <LineId Id="505" Count="2" />
      <LineId Id="509" Count="0" />
      <LineId Id="287" Count="0" />
      <LineId Id="123" Count="0" />
      <LineId Id="286" Count="0" />
      <LineId Id="125" Count="3" />
    </LineIds>
    <LineIds Name="FB_HomeSpitUnit.Call_FB">
      <LineId Id="93" Count="0" />
      <LineId Id="0" Count="16" />
      <LineId Id="32" Count="15" />
      <LineId Id="18" Count="0" />
      <LineId Id="77" Count="14" />
      <LineId Id="48" Count="0" />
      <LineId Id="94" Count="10" />
      <LineId Id="92" Count="0" />
      <LineId Id="105" Count="2" />
    </LineIds>
  </POU>
</TcPlcObject>